src/test/dev-workspace/src-readable/java/net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2_StringErrorContext.java
package net.labymod.core.laby3d.opengl.error.generated;

import java.util.HashMap;
import java.util.Map;

/* JADX INFO: loaded from: LabyMod-4.jar:net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2_StringErrorContext.class */
public final class EXTDrawBuffers2_StringErrorContext {
    public static Map<String, String> buildMethods() {
        Map<String, String> methods = new HashMap<>();
        methods.put("glColorMaskIndexedEXT(IZZZZ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("nglGetBooleanIndexedvEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glGetBooleanIndexedvEXT(IILjava/nio/ByteBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glGetBooleanIndexedEXT(II)Z", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("nglGetIntegerIndexedvEXT(IIJ)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glGetIntegerIndexedvEXT(IILjava/nio/IntBuffer;)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glGetIntegerIndexedEXT(II)I", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glEnableIndexedEXT(II)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glDisableIndexedEXT(II)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glIsEnabledIndexedEXT(II)Z", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        methods.put("glGetIntegerIndexedvEXT(II[I)V", "net/labymod/core/laby3d/opengl/error/generated/EXTDrawBuffers2ErrorContext");
        return methods;
    }
}
